...
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/menu_icon"
            android:scaleType="centerInside"
            android:padding="12dp"
            app:tint="?attr/colorPrimary"
            android:contentDescription="Menu" />

        <TextView
            android:id="@+id/Title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
...
    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="1dp"
        android:backgroundTint="?attr/colorPrimary"
        android:contentDescription="Edit"
        
        android:src="@drawable/baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
...
